app1/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      volumes:
        - name: shared-files
          persistentVolumeClaim:
            claimName: example-claim
      containers:
        - name: app1-timestamp
          image: findarkside/app1-timestamp:c23901d77d04d9aff1dbea94
          volumeMounts:
            - name: shared-files
              mountPath: /usr/src/app/files
        - name: app1-hash
          image: findarkside/app1-hash:9c48e2e4bbf19518de74a3c0
          volumeMounts:
            - name: shared-files
              mountPath: /usr/src/app/files
