app1/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-svc
  namespace: main-app
spec:
  type: NodePort
  selector:
    app: app1
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
