app1/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app1-ingress
  namespace: main-app
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: app1-svc
          servicePort: 80
      - path: /pingpong
        backend:
          serviceName: app3-svc
          servicePort: 80
